--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <a href="http://uin-malang.ac.id"> Jika mau gabung, bisa klik ini ya Kak</a>
 <div class="header">
     <div class="header-logo">
-        Progate</div>
+        Progate
+    </div>
         <div classe="header-list">
             <ul>
              <li>Tentang</li>
@@ -100,15 +101,16 @@
   </form>
 <div class="footer">
     <div class="footer-logo">
-     Progate</div>
-     <div class="footer-list">
+     Progate
+    </div>
+    <div class="footer-list">
       <ul>
        <li>Tentang</li>
        <li>Karier</li>
        <li>Hubungi Kami</li>
       </ul>
-     </div>
     </div>
+</div>
     <div class="main">
        <div class="copy-container">
            <h1>HELLO WORLD<span>.</span></h1>
