--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" hred="https://github.com/AridaNur/PK_Arida/blob/main/responsive.css"> 
 </head>
 <body>
     <h1>Program Studi Matematika</h1>
