--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" hred="https://github.com/AridaNur/PK_Arida/blob/main/responsive.css"> 
+    <link rel="stylesheet" href="responsive.css"> 
 </head>
 <body>
     <h1>Program Studi Matematika</h1>
@@ -97,7 +96,7 @@
 </form>
 <form action="/action_page.php">
     <label for="fname">First name:</label><br>
-    <input type="text" id="fname" value="Natasya"><br><br>
+    <input type="text" id="fname" value="Arida"><br><br>
     <input type="submit" value="Submit">
   </form>
 <div class="footer">
