--- a/index.html
+++ b/index.html
@@ -67,6 +67,201 @@
      <p>Swift</p>
     </div>
 </div>
+<div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Cari tau dari mana anda mau memulai!</h2>
+        </div>
+        <div class="lessons">
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/html.png">
+               <p>HTML & CSS</p>
+            </div>
+             <p class="text-contents">Bahasa yang digunakan untuk membuat dan mendesain tampilan situs web Anda. </p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+              <p>jQuery</p>
+            </div>
+            <p class="text-contents">Library JavaScript yang cepat, kaya akan fitur, dan mudah digunakan yang menangani animasi dan permintaan Ajax.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <p>Ruby</p>
+            </div>
+            <p class="text-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/php.png">
+              <p>PHP</p>
+            </div>
+            <p class="text-contents">Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+<div class="contact-form">
+    <h3 class="section-title">Hubungi kami</h3>
+    <p>Email (Wajib Diisi)</p>
+    <input>
+    <p>Pesan (Wajib Diisi)</p>
+    <textarea></textarea>
+    <p>*Bidang Wajib Diisi</p>
+    <input class="contact-submit" type="submit" value="Kirim">
+</div>
+<p>Choose your favorite Web language:</p>
+
+<form>
+    <input type="radio" id="html" name="fav_language" value="HTML">
+    <label for="html">HTML</label><br>
+    <input type="radio" id="css" name="fav_language" value="CSS">
+    <label for="css">CSS</label><br>
+    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+    <label for="javascript">JavaScript</label>
+</form>
+<form>
+    <input type="checkbox" id="vehicle1" name="vehicle1" value="Money">
+    <label for="vehicle1"> I have a money </label><br>
+    <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+    <label for="vehicle2"> I have a car</label><br>
+    <input type="checkbox" id="vehicle3" name="vehicle3" value="Bike">
+    <label for="vehicle3"> I have a bike</label>
+</form>
+<form action="/action_page.php">
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" value="Arida"><br><br>
+    <input type="submit" value="Submit">
+  </form>
+<div class="footer">
+    <div class="footer-logo">
+     Progate
+    </div>
+    <div class="footer-list">
+      <ul>
+       <li>Tentang</li>
+       <li>Karier</li>
+       <li>Hubungi Kami</li>
+      </ul>
+    </div>
+</div>
+    <div class="main">
+       <div class="copy-container">
+           <h1>HELLO WORLD<span>.</span></h1>
+           <h2>Ayo belajar coding</h2>
+       </div>
+    </div>
+</body>
+    </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="responsive.css"> 
+</head>
+<body>
+    <h1>Program Studi Matematika</h1>
+    <a>Selamat Datang di Program Studi Matematika</a>
+    <marquee>Statistika, Aljabar, dan Terapan</marquee>
+    <h2>Susah ga?</h2>
+    <p>Semangat, semoga di beri kemudahan</p>
+    <a href="http://uin-malang.ac.id"> Jika mau gabung, bisa klik ini ya Kak</a>
+<div class="header">
+    <div class="header-logo">
+        Progate
+    </div>
+        <div classe="header-list">
+            <ul>
+             <li>Tentang</li>
+             <li>Pelajaran</li>
+             <li>Hubungi Kami</li>
+            </ul>
+        </div>
+    </div>
+<img src="https://progate.com/images/html/beginner/school.jpg">
+
+<div class="main">
+    <div class="container">
+        <h1>BELAJAR CODING.</h1>
+        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
+        <p>Progate adalah platform online untuk belajar pemrograman.</p>
+        <p>Kami menawarkan lingkungan pemrograman yang lengkap.</p>
+    </div>
+    <div class="btn-wrapper">
+        <a href="#" class="btn signup"> daftar</a>
+        <p>atau</p>
+        <a href="#" class="btn facebook">
+            <span class="fa fa-facebook">
+            </span>Daftar dengan Facebook
+        </a>
+        <a href="#" class="btn twitter">
+            <span class="fa fa-twitter">
+            </span>Daftar dengan Twitter
+        </a>
+    </div>
+</div>
+<div class="contents">
+    <h3 class="section-title">Pelajaran</h3>
+    <div class="contents-item">
+     <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
+     <p>HTML & CSS</p>
+    </div>
+    <div class="contents-item">
+    <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+    <p>PHP</p>
+    </div>
+    <div class="contents-item">
+    <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+     <p>Ruby</p>
+    </div>
+    <div class="contents-item">
+    <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+     <p>Swift</p>
+    </div>
+</div>
+<div class="lesson-wrapper">
+      <div class="container">
+        <div class="heading">
+          <h2>Cari tau dari mana anda mau memulai!</h2>
+        </div>
+        <div class="lessons">
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/html.png">
+               <p>HTML & CSS</p>
+            </div>
+             <p class="text-contents">Bahasa yang digunakan untuk membuat dan mendesain tampilan situs web Anda. </p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+              <p>jQuery</p>
+            </div>
+            <p class="text-contents">Library JavaScript yang cepat, kaya akan fitur, dan mudah digunakan yang menangani animasi dan permintaan Ajax.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/ruby.png">
+              <p>Ruby</p>
+            </div>
+            <p class="text-contents">Bahasa dinamis, serba guna yang sederhana dan produktif. Ruby sering digunakan untuk membuat aplikasi web yang responsive.</p>
+          </div>
+          <div class="lesson">
+            <div class="lesson-icon">
+              <img src="https://prog-8.com/images/html/advanced/php.png">
+              <p>PHP</p>
+            </div>
+            <p class="text-contents">Bahasa skrip open source yang dapat disematkan ke dalam HTML, dan cocok untuk pengembangan web.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 <div class="contact-form">
     <h3 class="section-title">Hubungi kami</h3>
     <p>Email (Wajib Diisi)</p>
